[project]
name = "pattern-printer"
version = "0.1.0"
authors = [
    { name = "Yueh-Shun Li", email = "shamrocklee@posteo.net" },
]
description = "Print character patterns without counting spaces"
readme = "README.md"
requires-python = ">= 3.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ShamrockLee/pattern-printer"
Issues = "https://github.com/ShamrockLee/pattern-printer/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
